# backend-service

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  FUNCTIONALITY_CHECKLIST.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_all_endpoints.sh  test_document_v2.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  s3_service.py  schemas.py
app/routers/: auth.py  documents.py  health.py  permissions.py
app/services/: document_service.py  permission_service.py
app/utils/: dependencies.py  exceptions.py
deploy/: DEPLOYMENT_GUIDE.md  IMMEDIATE_FIX.md  docmanagement.service  iam_policy.json  quick_start.sh  setup_app.sh  setup_ec2.sh  setup_systemd.sh
tests/: conftest.py  test_auth.py  test_health.py
